Fix icon overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1067,10 +1067,13 @@ select.form-control:not([size]):not([multiple]){
 	color: #63c7bd;
 }
 
+.navbar-brand {
+	max-height: 90px;
+}
 
-
-
-
+.navbar-brand-image {
+	max-height: 110px;
+}
 
 
 
